--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-
   position: relative;
   overflow: hidden;
 }
@@ -37,12 +36,9 @@ body::before {
   right: -10px;
   bottom: -10px;
   z-index: -1;
-
   background-image: url('/assets/bg.png');
   background-size: cover;
   background-position: center;
-
-  /* Nova animação de flutuação vertical */
   animation: subirDescer 8s ease-in-out infinite;
 }
 
@@ -91,7 +87,7 @@ body::before {
   border-radius: 12px;
   font-size: 1.25rem;
   border: 1px solid var(--border-color);
-  transition: transform 0.2s ease, background-color 0.2s ease;
+  transition: transform 0.2s ease, background-color 0.2s ease, border-color 0.2s ease;
 }
 
 .links-list a:hover {
@@ -111,19 +107,37 @@ body::before {
   height: 22px;
 }
 
+#youtube:hover {
+  background-color: rgba(255, 0, 0, 0.1);
+  border-color: rgba(255, 0, 0, 0.4);
+}
+
+#instagram:hover {
+  background-color: rgba(255, 0, 119, 0.1);
+  border-color: rgba(255, 0, 149, 0.4);
+}
+
+#tiktok:hover {
+  background-color: rgba(0, 140, 255, 0.1);
+  border-color: rgba(0, 183, 255, 0.4);
+}
+
+#ligamagic:hover {
+  background-color: rgba(255, 136, 0, 0.1);
+  border-color: rgba(255, 123, 0, 0.466);
+}
+
+
 @keyframes subirDescer {
   0% {
-    /* Começa em uma posição mais baixa */
     transform: translateY(20px) scale(1.1);
   }
 
   50% {
-    /* Sobe para uma posição mais alta */
     transform: translateY(-20px) scale(1.1);
   }
 
   100% {
-    /* Retorna à posição inicial para um loop suave */
     transform: translateY(20px) scale(1.1);
   }
 }
